apply plugin: 'com.android.application'

apply plugin: 'com.google.gms.google-services'
android {
    compileSdk 34
    defaultConfig {
        applicationId "com.newtifry.pro3"
        minSdkVersion 21
        targetSdkVersion 34
    }
    buildTypes {
        debug {
        }

        release {
            minifyEnabled true
            proguardFiles 'proguard.cfg'
        }
    }
    useLibrary 'org.apache.http.legacy'
    productFlavors {
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    namespace 'com.newtifry.pro3'
    buildFeatures {
        buildConfig true
    }

}

configurations {
    cleanedAnnotations
    implementation.exclude group: 'org.jetbrains' , module:'annotations'
}

dependencies {
    implementation project(':gestureimageview')
    implementation project(':localeapi')
    implementation project(':shared')
    implementation 'com.google.firebase:firebase-messaging'
    implementation 'commons-io:commons-io:2.13.0'
    implementation 'com.nineoldandroids:library:2.4.0'
    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
    implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
    compileOnly 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
    implementation 'com.ms-square:expandableTextView:0.1.4'
    implementation 'com.github.MikeOrtiz:TouchImageView:3.3'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'com.google.firebase:firebase-core:21.1.1'
     // Add dependency
    implementation "androidx.versionedparcelable:versionedparcelable:1.2.0"
    implementation platform('com.google.firebase:firebase-bom:33.2.0')
}

configurations.implementation {
    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
}
